crates/openpit-derive/tests/ui/fail/derive_on_tuple_struct.rs
extern crate self as openpit;

use openpit_derive::RequestFields;

#[derive(RequestFields)]
struct Wrapper(u64);

fn main() {}
